--- a/src/components/modals/tacModal/TacModal.scss
+++ b/src/components/modals/tacModal/TacModal.scss
@@ -21,11 +21,11 @@
   }
 }
 .TacButtonRes {
-  display: flex;
-  margin-top: 2rem;
+  margin-top: 1.7rem;
   margin-right: 2.5rem;
 
   @media (max-width: 576px) {
+    display: flex;
     justify-content: center;
     margin-right: 0px;
   }
